# cisco-ios-tplink

./: .gitignore  README.md  go.mod  pyproject.toml
.github/workflows/: release.yml
archived/: README.md
archived/docs/: sdk.md
archived/examples/: read_switch.py
archived/tests/: test_cli_ios_compat.py  test_switch_mocked.py
archived/tplink_tool/: sdk.py
cmd/tplink-cli/: main.go  main_decode_test.go  main_scan_test.go  main_suite_test.go
docs/: cli.md
examples/: configure_vlans.py  read_switch.py
examples/hardware_suite/: plan.192.168.3.49.firstpass.json  plan.sample.json
examples/read_switch/: main.go
go/: README.md  go.mod
go/cmd/tplink-cli/: main.go
go/examples/configure_vlans/: main.go
go/tplink/: parser.go  parser_test.go  ports.go
scripts/: build-release.sh
tests/: conftest.py  test_cli_hardening.py  test_live.py  test_parser.py
toolbox/hardwaresuite/: suite.go  suite_test.go
tplink/: backup_decode.go  backup_decode_test.go  backup_structure.go  backup_structure_test.go  cli.go  cli_completion_test.go  cli_script_test.go  cli_write_erase_test.go  client.go  client_mocked_test.go  mutations_mocked_test.go  parser_test.go  scan.go  scan_test.go  system.go  types.go  vlan_qos.go
tplink_tool/: __init__.py  cli.py
