[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tplink-tool"
version = "0.1.0"
description = "SDK and CLI for TP-Link TL-SG108E switches"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
keychain = [
  "keyring>=25.0.0",
]

[project.scripts]
tplink-cli = "tplink_tool.cli:main"

[tool.setuptools.packages.find]
include = ["tplink_tool*"]
